--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,18 +57,20 @@ html {
 }
 
 .settings {
-  position: absolute;
-  display: inline-block;
-  width: 140px;
-  border: 1px solid $c_black;
-  padding: 5px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 200%;
+  width: 100%;
+  overflow: scroll;
   background-color: #eee;
 
   input[type="number"],
   input[type="range"] {
     position: relative;
-    width: 80px;
-    bottom: 25%;
+    font-size: 10px;
+    width: 70px;
+    bottom: 4px;
     left: 7px;
     margin-right: 8px;
   }
@@ -81,6 +83,22 @@ html {
   img {
     width: 32px;
     height: 32px;
+  }
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  &::-webkit-scrollbar-track {
+    display: none;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    display: none;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    display: none;
   }
 }
 
